--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AdaptiveLabTest</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <title>All About "Coke"</title>
   <%= csrf_meta_tags %>
 </head>
 <body>
