--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,11 @@
 <h1>All About "Coke"</h1>
 
+<% if flash[:error].present? %>
+  <div>
+    <%= flash[:error] %>
+  </div>
+<% end %>
+
 <%= button_to "Fetch more tweets",
   controller: :landing,
   action: :fetch_more_tweets,
