--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -13,8 +13,10 @@
 
 <div class='tweets-list'>
   <% tweets.each do |tweet| %>
-    <div class='tweet-container'>
-      <%= tweet.message %>
-    </div>
+    <p class='tweet-container'>
+      handle: <%= tweet.user_handle %><br>
+      message: <%= tweet.message %><br>
+      sentiment: <%= tweet.sentiment %><br>
+    </p>
   <% end %>
 </div>
