show how many times a tweet has been encountered from the api

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -17,6 +17,7 @@
       handle: <%= tweet.user_handle %><br>
       message: <%= tweet.message %><br>
       sentiment: <%= tweet.sentiment %><br>
+      seen: <%= pluralize(tweet.times_seen, 'time') %>
     </p>
   <% end %>
 </div>
