--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All About "Coke"</h1>
-
+<%= link_to "Home", :root %>
 <%= button_to "Fetch more tweets",
   controller: :landing,
   action: :fetch_more_tweets,
